@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  _mulint.s
 ;
-;  Copyright (C) 2014-2015, Krzysztof Nikiel, Ben Shi, Philipp Klaus Krause
+;  Copyright (C) 2014-2021, Krzysztof Nikiel, Ben Shi, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -31,25 +31,26 @@
 .area CODE
 
 __mulint:
+	pushw	x
 
-	ldw	x, (#4, sp)
 	ld	a, (#7, sp)
 	mul	x, a
 	pushw	x
 
-	ldw	x, (#5, sp)
+	ldw	x, (#2, sp)
 	mul	x, a
 	ld	a, xl
 	add	a, (#1, sp)
 	ld	(#1, sp), a
 
-	ldw	x, (#6, sp)
+	ldw	x, (#3, sp)
 	ld	a, (#8, sp)
 	mul	x, a
 	ld	a, xl
 	add	a, (#1, sp)
 	popw	x
 	ld	xh, a
-	
+
+	addw	sp, #2
 	retf
 
